--- a/public/index.html
+++ b/public/index.html
@@ -23,13 +23,25 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora&display=optional" />
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css" />
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css" />
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/bootstrap/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora"> -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/fonts/fontawesome-all.min.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/fonts/material-icons.min.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/fonts/fontawesome5-overrides.min.css">
+    <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/assets/img/Aeropress192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="%PUBLIC_URL%/assets/img/Aeropress.png">
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <script>
+      if('serviceWorker' in navigator) {
+          window.addEventListener('load', () => {
+              navigator.serviceWorker.register('./serviceworker.js')
+                  .then((reg) => console.log('Success: ', reg.scope))
+                  .catch((err) => console.log('Failure: ', err));
+          })
+      }
+  </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
