--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,21 @@
     <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/assets/img/Aeropress192.png">
     <link rel="icon" type="image/png" sizes="512x512" href="%PUBLIC_URL%/assets/img/Aeropress.png">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', function() {
+          navigator.serviceWorker.register('worker.js').then(function(registration) {
+            console.log('Worker registration successful', registration.scope);
+          }, function(err) {
+            console.log('Worker registration failed', err);
+          }).catch(function(err) {
+            console.log(err);
+          });
+        });
+      } else {
+        console.log('Service Worker is not supported by browser.');
+      }
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -46,6 +61,7 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
+ 
     -->
   </body>
     <script src="%PUBLIC_URL%/assets/bootstrap/js/bootstrap.min.js"></script>
