--- a/public/index.html
+++ b/public/index.html
@@ -32,8 +32,8 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/fonts/fontawesome5-overrides.min.css">
     <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/assets/img/Aeropress192.png">
     <link rel="icon" type="image/png" sizes="512x512" href="%PUBLIC_URL%/assets/img/Aeropress.png">
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+    <link rel="manifest" href="/manifest.json" />
+    <!-- <link rel="manifest" href='data:application/manifest+json,{"name":"SharePoint Title","short_name":"SP Title","description":"The one and only SharePoint Site Title program!","start_url":".","icons":[{"src":"android-chrome-144x144.png","sizes":"144x144","type":"image/png"},{"src":"android-chrome-192x192.png","sizes":"192x192","type":"image/png"},{"src":"android-chrome-256x256.png","sizes":"256x256","type":"image/png"}],"background":"rgb(255,0,0)","theme_color":"rgb(255,255,255)","display":"standalone"}' /> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -50,6 +50,4 @@
  
     -->
   </body>
-    <script src="%PUBLIC_URL%/assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="%PUBLIC_URL%/assets/js/bs-init.js"></script>
 </html>
