--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/fonts/fontawesome5-overrides.min.css">
     <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/assets/img/Aeropress192.png">
     <link rel="icon" type="image/png" sizes="512x512" href="%PUBLIC_URL%/assets/img/Aeropress.png">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/appletouch_icon.png">
     <link rel="manifest" href="/manifest.json" />
     <!-- <link rel="manifest" href='data:application/manifest+json,{"name":"SharePoint Title","short_name":"SP Title","description":"The one and only SharePoint Site Title program!","start_url":".","icons":[{"src":"android-chrome-144x144.png","sizes":"144x144","type":"image/png"},{"src":"android-chrome-192x192.png","sizes":"192x192","type":"image/png"},{"src":"android-chrome-256x256.png","sizes":"256x256","type":"image/png"}],"background":"rgb(255,0,0)","theme_color":"rgb(255,255,255)","display":"standalone"}' /> -->
   </head>
